--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@500;600;700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer base {
   :root {
-    font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+    font-family: "League Spartan", sans-serif;
     font-size: 16px;
     line-height: 24px;
     font-weight: 400;
